Subindo alterações, cadastro com integração ao banco de Dados

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/styles/style.css">
-    <script src="assets/script/script.js"></script>
-    <title>Simulação</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="script/script.js"></script>
+    <title>Latech</title>
 </head>
 
 <body>
@@ -35,10 +32,10 @@
                 <button>Saiba mais</button>
             </div>
             <div class="imagem-garrafa">
-                <img src="assets/img/icons/milk-bottle.png">
+                <img src="img/icons/milk-bottle.png">
             </div>
             <!-- não consigo inserir as duas imagens!!!! scrr -->
-            <img class="header-background" src="assets/img/background/milkwave.png">
+            <img class="header-background" src="img/background/milkwave.png">
         </div>
     </header>
     <main>
@@ -76,7 +73,7 @@
 
             <div class="objetivo01">
                 <div>
-                    <img class="vaca" src="assets/img/illustrations/vaca.png" alt="">
+                    <img class="vaca" src="img/illustrations/vaca.png" alt="">
                 </div>
                 <div>
                     <p> A indústria do leite é altamente competitiva, e os produtores enfrentam desafios constantes para
@@ -85,7 +82,7 @@
                         não for feito corretamente.</p>
                 </div>
             </div>
-            <img class="arrow-objetivo" src="assets/img/icons/arrow-objetivo.svg" alt="">
+            <img class="arrow-objetivo" src="img/icons/arrow-objetivo.svg" alt="">
             <div class="objetivo02">
                 <div>
                     <p>
@@ -96,13 +93,13 @@
                     </p>
                 </div>
                 <div>
-                    <img class="business" src="assets/img/illustrations/Business deal-cuate.svg" alt="">
+                    <img class="business" src="img/illustrations/Business deal-cuate.svg" alt="">
                 </div>
             </div>
-            <img class="arrow-objetivo2" src="assets/img/icons/arrow-objetivo2.svg" alt="">
+            <img class="arrow-objetivo2" src="img/icons/arrow-objetivo2.svg" alt="">
             <div class="objetivo03">
                 <div>
-                    <img class="business" src="assets/img/illustrations/Investment data-cuate.svg" alt="">
+                    <img class="business" src="img/illustrations/Investment data-cuate.svg" alt="">
                 </div>
                 <div>
                     <p>
@@ -114,7 +111,7 @@
                 </div>
             </div>
         </section>
-        <img class="milk02" src="assets/img/background/milkwave2.png">
+        <img class="milk02" src="img/background/milkwave2.png">
         <section id="solucao">
             <!-- (Yuri e Michael) -->
             <div class="container">
@@ -129,7 +126,7 @@
                 <div class="container cards">
                     <div class="card" id="cards_carousel">
                         <h3 class="titulo">Instalacao</h3>
-                        <img src="assets/img/illustrations/thermostat.png" alt="">
+                        <img src="img/illustrations/thermostat.png" alt="">
                         <ol>
                             <li class="texto">
                                 Nossa equipe de instalação realiza uma visita ao local para avaliar as necessidades
@@ -147,7 +144,7 @@
                     </div>
                     <div class="card" id="cards_carousel">
                         <h3 class="titulo">Funcionamento</h3>
-                        <img src="assets/img/illustrations/settings.png" alt="">
+                        <img src="img/illustrations/settings.png" alt="">
                         <ol>
                             <li class="texto">
                                 Os sensores coletam informações de temperatura e umidade do ambiente e dos produtos
@@ -165,7 +162,7 @@
                     </div>
                     <div class="card" id="cards_carousel">
                         <h3 class="titulo">Beneficios</h3>
-                        <img src="assets/img/illustrations/diagram.png" alt="">
+                        <img src="img/illustrations/diagram.png" alt="">
                         <ol>
                             <li class="texto">
                                 Nossa equipe de instalação realiza uma visita ao local para avaliar as necessidades
@@ -246,20 +243,20 @@
         <!-- (Gabi) tudo do footer vem aqui -->
         <container class="final">
             <div class="logo_footer">
-                <img src="/assets/img/icons/latech(azul).svg" alt="">
+                <img src="img/icons/latech(azul).svg" alt="">
             </div>
 
             <div class="textos_rodape">
                 <ul>
-                    <li><img src="/assets/img/icons/icon_localizacao.png" alt=""> Rua Haddock Lobo, 595 - Cerqueira
+                    <li><img src="img/icons/icon_localizacao.png" alt=""> Rua Haddock Lobo, 595 - Cerqueira
                         César, São Paulo - SP, 01414-001</li><br>
-                    <li id="dois"><img src="/assets/img/icons/icon_telefone.png" alt=""> 4002-8922 <img
-                            src="/assets/img/icons/icon_email.png" alt=""> contato@latech.com.br</li><br><br>
-                    <li id="redes">Redes Sociais <img src="/assets/img/icons/icon_facebook.png" alt=""> <img
-                            src="/assets/img/icons/icon_twitter.png" alt=""> <img
-                            src="/assets/img/icons/icon_linkedin.png" alt=""> <img
-                            src="/assets/img/icons/icon_youtube.png" alt=""> <img
-                            src="/assets/img/icons/icon_instagram.png" alt=""></li>
+                    <li id="dois"><img src="img/icons/icon_telefone.png" alt=""> 4002-8922 <img
+                            src="img/icons/icon_email.png" alt=""> contato@latech.com.br</li><br><br>
+                    <li id="redes">Redes Sociais <img src="img/icons/icon_facebook.png" alt=""> <img
+                            src="img/icons/icon_twitter.png" alt=""> <img
+                            src="img/icons/icon_linkedin.png" alt=""> <img
+                            src="img/icons/icon_youtube.png" alt=""> <img
+                            src="img/icons/icon_instagram.png" alt=""></li>
                 </ul>
 
             </div>
