--- a/public/login.html
+++ b/public/login.html
@@ -1,4 +1,5 @@
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <script src="script/script.js"></script>
     <title>Login</title>
 </head>
+
 <body>
     <header class="header-login">
 
@@ -23,30 +25,108 @@
         </nav>
 
         <div class="container-login">
-            <h1 class="titulo">login</h1>
+            <h1 class="titulo"><a href="login.html">login</a> | <a href="cadastro.html">cadastro</a></h1>
             <p>
-                Bem-vindo ao nosso sistema de gerenciamento de umidade e temperatura para armazenamento de leite. Por favor, faça o login abaixo com suas credenciais para acessar sua conta.
+                Bem-vindo ao nosso sistema de gerenciamento de umidade e temperatura para armazenamento de leite. Por
+                favor, faça o login abaixo com suas credenciais para acessar sua conta.
             </p>
 
             <div class="form">
+                <div id="div_erros_login"></div>
                 <label for="inp_email">
-                    Email ou usuário: 
+                    Email ou usuário:
                     <input type="text" id="inp_email" placeholder="seu@email.com">
                 </label>
                 <label for="inp_senha">
                     Senha:
                     <input type="password" id="inp_senha" placeholder="********">
                 </label>
-                <button class="btn" onclick="validarSessao()">entrar</button>
+                <button class="btn" onclick="entrar()">entrar</button>
 
-                <p>Não possui uma conta? Faça seu <a href="cadastro.html"><span>cadastro!</span></a> <br> </a> 
-                <a href="login.html"><span>Esqueci a senha</span></a></p> 
+                <p>Não possui uma conta? Faça seu <a href="cadastro.html"><span>cadastro!</span></a> <br> </a>
+                    <a href="recpSenha()"><span>Esqueci a senha</span></a>
+                </p>
+                <div id="div_aguardar" class="loading-div">
+                </div>
+
             </div>
         </div>
-        <img 
-        src="img/background/milkwave.png" 
-        class="header-background"
-        alt="">
+        <img src="img/background/milkwave.png" class="header-background" alt="">
     </header>
 </body>
+
 </html>
+
+<script>
+
+
+    function entrar() {
+        aguardar();
+
+        var emailVar = inp_email.value;
+        var senhaVar = inp_senha.value;
+
+        if (emailVar == "" || senhaVar == "") {
+            cardErro.style.display = "block"
+            mensagem_erro.innerHTML = "(Mensagem de erro para todos os campos em branco)";
+            finalizarAguardar();
+            return false;
+        }
+        else {
+            setInterval(sumirMensagem, 5000)
+        }
+
+        console.log("FORM LOGIN: ", emailVar);
+        console.log("FORM SENHA: ", senhaVar);
+
+        fetch("/empresa/autenticar", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({
+                emailServer: emailVar,
+                senhaServer: senhaVar
+            })
+        }).then(function (resposta) {
+            console.log("ESTOU NO THEN DO entrar()!")
+
+            if (resposta.ok) {
+                console.log(resposta);
+
+                resposta.json().then(json => {
+                    console.log(json);
+                    console.log(JSON.stringify(json));
+
+                    sessionStorage.EMAIL_EMPRESA = json.email;
+                    sessionStorage.NOME_EMPRESA = json.nome;
+                    sessionStorage.ID_EMPRESA = json.id;
+
+                    setTimeout(function () {
+                        window.location = "./dashboard/cards.html";
+                    }, 1000); // apenas para exibir o loading
+
+                });
+
+            } else {
+
+                console.log("Houve um erro ao tentar realizar o login!");
+
+                resposta.text().then(texto => {
+                    console.error(texto);
+                    finalizarAguardar(texto);
+                });
+            }
+
+        }).catch(function (erro) {
+            console.log(erro);
+        })
+
+        return false;
+    }
+
+    function sumirMensagem() {
+        cardErro.style.display = "none"
+    }
+
+</script>
