--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -30,64 +30,62 @@
 
         <div class="container-login">
             <div class="cadastro-login">
-                <h1 class="titulo"><a href="login.html">login</a> | <a href="cadastro.html">cadastro</a></h1>
+                <a href="login.html">login</a> 
+                <a href="cadastro.html" class="cad-selected">cadastro</a>
             </div>
-            <p>
-                Por favor, insira seus dados para poder ser cadastrado no nosso sistema.
-            </p>
-
-            <div class="alerta_erro">
-                <div class="card_erro" id="cardErro">
-                    <span id="mensagem_erro"></span>
+            <div class="main-container-login">
+                <p>
+                    Por favor, insira seus dados para poder ser cadastrado no nosso sistema.
+                </p>
+                <div class="alerta_erro">
+                    <div class="card_erro" id="cardErro">
+                        <span id="mensagem_erro"></span>
+                    </div>
                 </div>
-            </div>
-            <div class="form">
-
-                <label for="inp_nome">
-                    Nome da Empresa:
-                    <input type="text" id="inp_nome">
-                </label>
-                <div class="flex">
-                    <label for="inp_cnpj">
-                        CNPJ:
-                        <input type="text" id="inp_cnpj" onkeydown="return ( event.ctrlKey || event.altKey 
-                    || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
-                    || (95<event.keyCode && event.keyCode<106)
-                    || (event.keyCode==8) || (event.keyCode==9) 
-                    || (event.keyCode>34 && event.keyCode<40) 
-                    || (event.keyCode==46) )" onkeypress="$(this).mask('00.000.000/0000-00')"" placeholder="
-                            00.000.000/0000-00">
-
+                <div class="form">
+                    <label for="inp_nome">
+                        Nome da Empresa:
+                        <input type="text" id="inp_nome" placeholder="Latech Corp">
                     </label>
-
-                    <label for="inp_telefone">
-                        Telefone:
-                        <input type="text" id="inp_telefone" onkeydown="return ( event.ctrlKey || event.altKey 
-                        || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
+                    <div class="flex">
+                        <label for="inp_cnpj">
+                            CNPJ:
+                            <input type="text" id="inp_cnpj" onkeydown="return ( event.ctrlKey || event.altKey
+                        || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false)
                         || (95<event.keyCode && event.keyCode<106)
-                        || (event.keyCode==8) || (event.keyCode==9) 
-                        || (event.keyCode>34 && event.keyCode<40) 
-                        || (event.keyCode==46) )" onkeypress="$(this).mask('(00) 9 0000-0000')"
-                            placeholder="(00) 0 0000-0000">
+                        || (event.keyCode==8) || (event.keyCode==9)
+                        || (event.keyCode>34 && event.keyCode<40)
+                        || (event.keyCode==46) )" onkeypress="$(this).mask('12.345.678/9999-99')"" placeholder="
+                                00.000.000/0000-00">
+                        </label>
+                        <label for="inp_telefone">
+                            Telefone:
+                            <input type="text" id="inp_telefone" onkeydown="return ( event.ctrlKey || event.altKey
+                            || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false)
+                            || (95<event.keyCode && event.keyCode<106)
+                            || (event.keyCode==8) || (event.keyCode==9)
+                            || (event.keyCode>34 && event.keyCode<40)
+                            || (event.keyCode==46) )" onkeypress="$(this).mask('(00) 90000-0000')"
+                                placeholder="(99) 99999-9999">
+                        </label>
+                    </div>
+                    <label for="inp_email">
+                        Email:
+                        <input type="text" id="inp_email" placeholder="email@latech.com">
                     </label>
-                </div>
-                <label for="inp_email">
-                    Email:
-                    <input type="text" id="inp_email">
-                </label>
-                <label for="inp_senha">
-                    Senha:
-                    <input type="password" id="inp_senha" placeholder="********">
-                </label>
-                <label for="inp_confiSenha">
-                    Confirme sua senha:
-                    <input type="password" id="inp_confiSenha" placeholder="********">
-                </label>
-                <button class="btn" onclick="cadastrar()"> Cadastrar</button>
-                <div id="div_aguardar" class="loading-div">
-                </div>
-
-                <div id="div_erros_login"></div>
+                    <label for="inp_senha">
+                        Senha:
+                        <input type="password" id="inp_senha" placeholder="********">
+                    </label>
+                    <label for="inp_confiSenha">
+                        Confirme sua senha:
+                        <input type="password" id="inp_confiSenha" placeholder="********">
+                    </label>
+                    <button class="btn" onclick="cadastrar()"> Cadastrar</button>
+                    <div id="div_aguardar" class="loading-div">
+                    </div>
+                    <div id="div_erros_login"></div>
+            </div>
             </div>
         </div>
         <img src="img/background/milkwave.png" class="header-background" alt="">
