--- a/public/login.html
+++ b/public/login.html
@@ -25,30 +25,30 @@
         </nav>
 
         <div class="container-login">
-            <h1 class="titulo"><a href="login.html">login</a> | <a href="cadastro.html">cadastro</a></h1>
-            <p>
-                Bem-vindo ao nosso sistema de gerenciamento de umidade e temperatura para armazenamento de leite. Por
-                favor, faça o login abaixo com suas credenciais para acessar sua conta.
-            </p>
-
-            <div class="form">
-                <div id="div_erros_login"></div>
-                <label for="inp_email">
-                    Email ou usuário:
-                    <input type="text" id="inp_email" placeholder="seu@email.com">
-                </label>
-                <label for="inp_senha">
-                    Senha:
-                    <input type="password" id="inp_senha" placeholder="********">
-                </label>
-                <button class="btn" onclick="entrar()">entrar</button>
-
-                <p>Não possui uma conta? Faça seu <a href="cadastro.html"><span>cadastro!</span></a> <br> </a>
-                    <a href="recpSenha()"><span>Esqueci a senha</span></a>
+            <div class="cadastro-login">
+                <a href="login.html" class="log-selected">login</a>
+                <a href="cadastro.html">cadastro</a>
+            </div>
+            <div class="main-container-login">
+                <p>
+                    Bem-vindo ao nosso sistema de gerenciamento de umidade e temperatura para armazenamento de leite. Por
+                    favor, faça o login abaixo com suas credenciais para acessar sua conta.
                 </p>
-                <div id="div_aguardar" class="loading-div">
+                <div class="form">
+                    <div id="div_erros_login"></div>
+                    <label for="inp_email">
+                        Email ou usuário:
+                        <input type="text" id="inp_email" placeholder="seu@email.com">
+                    </label>
+                    <label for="inp_senha">
+                        Senha:
+                        <input type="password" id="inp_senha" placeholder="********">
+                    </label>
+                    <button class="btn" onclick="entrar()">entrar</button>
+                    <a href="recpSenha()"><span>Esqueci a senha</span></a>
+                    <div id="div_aguardar" class="loading-div">
+                    </div>
                 </div>
-
             </div>
         </div>
         <img src="img/background/milkwave.png" class="header-background" alt="">
