--- a/public/login.html
+++ b/public/login.html
@@ -12,11 +12,11 @@
 <body>
     <header class="header-login">
 
-        <nav class="navbar">
-            <span class="logo">Latech</span>
+        <nav id="navbar">
+            <span id="logo">Latech</span>
             <ul>
                 <li>
-                    <a href="index.html" class="voltar">
+                    <a href="index.html" class="voltar nav-link">
                         <img src="img/icons/arrow.svg" alt="">
                         Voltar
                     </a>
