atualização do simulador

--- a/public/index.html
+++ b/public/index.html
@@ -198,7 +198,7 @@
                     </label>
 
                     <label for="inp_custo_prod">
-                        <text>Custo de Produção:</text>
+                        <text>Custo de Produção por litro:</text>
                         <input id="inp_custo_prod" placeholder="Ex.: 1.5">
                     </label>
 
