--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -205,33 +206,31 @@
                     <label for="inp_venda_litro">
                         <text>Preço de venda do litro</text>
                         <input id="inp_venda_litro" placeholder="Ex.: 4">
-                    </label>    
+                    </label>
 
                     <button onclick="simular()" class="btn">Calcular</button>
                 </div>
                 <div id="resultado">
-                    <div class="table-titulos">
-                        <table id="tb-resultado">
-                            <tr class="titulos-table">
-                                <td></td>
-                                <td>Mês</td>
-                                <td>Ano</td>
-                                <td>Perda anual</td>
-                            </tr>
-                            <tr>
-                                <td class="title-colunm">Sem nossa solução</td>
-                                <td class="info-colunm">R$ 00,00</td>
-                                <td class="info-colunm">R$ 00,00</td>
-                                <td class="info-column">R$ 00,00</td>
-                            </tr>
-                            <tr>
-                                <td class="title-colunm">Com nossa solução</td>
-                                <td class="info-colunm">R$ 00,00</td>
-                                <td class="info-colunm">R$ 00,00</td>
-                                <td class="info-column">R$ 00,00</td>
-                            </tr>
-                        </table>
-                    </div>
+                    <table id="tb-resultado">
+                        <tr class="titulos-table">
+                            <td></td>
+                            <td>Mês</td>
+                            <td>Ano</td>
+                            <td>Perda anual</td>
+                        </tr>
+                        <tr>
+                            <td class="title-colunm">Sem nossa solução</td>
+                            <td class="info-colunm">R$ 00,00</td>
+                            <td class="info-colunm">R$ 00,00</td>
+                            <td class="info-column">R$ 00,00</td>
+                        </tr>
+                        <tr>
+                            <td class="title-colunm">Com nossa solução</td>
+                            <td class="info-colunm">R$ 00,00</td>
+                            <td class="info-colunm">R$ 00,00</td>
+                            <td class="info-column">R$ 00,00</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </section>
@@ -247,10 +246,11 @@
                 <div class="textos-rodape">
                     <ul>
                         <li>
-                            <img src="img/icons/icon_localizacao.png" alt=""> Rua Haddock Lobo, 595 - Cerqueira César, São Paulo - SP, 01414-001
-                        <br>
+                            <img src="img/icons/icon_localizacao.png" alt=""> Rua Haddock Lobo, 595 - Cerqueira César,
+                            São Paulo - SP, 01414-001
+                            <br>
                         <li id="dois">
-                            <img src="img/icons/icon_telefone.png" alt=""> 4002-8922 
+                            <img src="img/icons/icon_telefone.png" alt=""> 4002-8922
                             <img src="img/icons/icon_email.png" alt=""> contato@latech.com.br
                         </li>
                         <br><br>
